--- a/html/login.html
+++ b/html/login.html
@@ -29,7 +29,7 @@
         <nav id="mobile_menu"></nav>
 		  <nav id="nav_menu">
   	      <ul>
-    	       <li><a href="../home.html">Home</a></li>
+    	       <li><a href="../index.html">Home</a></li>
     	       <li><a href="../html/news.html">News</a></li>
     	       <li><a href="#characters">Character</a></li>
     	       <li><a href="#maps">Maps</a></li>
@@ -82,7 +82,7 @@
     
     <div class="footer">
     <footer>		
-        <a href="../home.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#contact" >Contact</a>
