--- a/html/news.html
+++ b/html/news.html
@@ -30,7 +30,7 @@
         <nav id="mobile_menu"></nav>
 		  <nav id="nav_menu">
   	      <ul>
-    	       <li><a href="../home.html">Home</a></li>
+    	       <li><a href="../index.html">Home</a></li>
     	       <li><a href="news.html" class="current">News</a></li>
     	       <li><a href="#characters">Character</a></li>
     	       <li><a href="#maps">Maps</a></li>
@@ -122,7 +122,7 @@
     
     <div class="footer">
 	<footer>		
-        <a href="../home.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#contact" >Contact</a>
