--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Valorant</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="css/home.css">
+	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -30,7 +30,7 @@
         <nav id="mobile_menu"></nav>
 		  <nav id="nav_menu">
   	      <ul>
-    	       <li><a href="home.html" class="current">Home</a></li>
+    	       <li><a href="index.html" class="current">Home</a></li>
     	       <li><a href="html/news.html">News</a></li>
     	       <li><a href="#characters">Character</a></li>
     	       <li><a href="#maps">Maps</a></li>
@@ -140,7 +140,7 @@
     
     <div class="footer">
 	<footer>		
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#contact" >Contact</a>
