--- a/html/article1.html
+++ b/html/article1.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Valorant</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../css/article1.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -31,8 +31,8 @@
   	      <ul>
     	       <li><a href="../index.html">Home</a></li>
     	       <li><a href="../html/news.html" class="current">News</a></li>
-    	       <li><a href="#characters">Character</a></li>
-    	       <li><a href="#maps">Maps</a></li>
+    	       <li><a href="../html/UnderConstruction.html">Character</a></li>
+    	       <li><a href="../html/UnderConstruction.html">Maps</a></li>
     	   </ul>
            </nav>
         </div>
@@ -85,9 +85,9 @@
     <div class="footer">
 	<footer>		
         <a href="../index.html">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact" >Contact</a>
+        <a href="../html/UnderConstruction.html">About</a>
+        <a href="../html/UnderConstruction.html">Services</a>
+        <a href="../html/UnderConstruction.html" >Contact</a>
 	</footer>
     </div>
     
