--- a/html/news.html
+++ b/html/news.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Valorant</title>
-	<link rel="shortcut icon" href="/images/favicon.ico">
+	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../css/news.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
@@ -32,8 +32,8 @@
   	      <ul>
     	       <li><a href="../index.html">Home</a></li>
     	       <li><a href="news.html" class="current">News</a></li>
-    	       <li><a href="#characters">Character</a></li>
-    	       <li><a href="#maps">Maps</a></li>
+    	       <li><a href="../html/UnderConstruction.html">Character</a></li>
+    	       <li><a href="../html/UnderConstruction.html">Maps</a></li>
     	   </ul>
             </nav>
         </div>
@@ -123,9 +123,9 @@
     <div class="footer">
 	<footer>		
         <a href="../index.html">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact" >Contact</a>
+        <a href="../html/UnderConstruction.html">About</a>
+        <a href="../html/UnderConstruction.html">Services</a>
+        <a href="../html/UnderConstruction.html" >Contact</a>
 	</footer>
     </div>
     
