--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   	      <ul>
     	       <li><a href="index.html" class="current">Home</a></li>
     	       <li><a href="html/news.html">News</a></li>
-    	       <li><a href="#characters">Character</a></li>
-    	       <li><a href="#maps">Maps</a></li>
+    	       <li><a href="html/UnderConstruction.html">Character</a></li>
+    	       <li><a href="html/UnderConstruction.html">Maps</a></li>
     	   </ul>
            </nav>
         </div>
@@ -141,9 +141,9 @@
     <div class="footer">
 	<footer>		
         <a href="index.html">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact" >Contact</a>
+        <a href="html/UnderConstruction.html">About</a>
+        <a href="html/UnderConstruction.html">Services</a>
+        <a href="html/UnderConstruction.html" >Contact</a>
 	</footer>
     </div>
     
