--- a/html/UnderConstruction.html
+++ b/html/UnderConstruction.html
@@ -30,8 +30,8 @@
         <nav id="mobile_menu"></nav>
 		  <nav id="nav_menu">
   	      <ul>
-    	       <li><a href="/index.html">Home</a></li>
-    	       <li><a href="/html/news.html">News</a></li>
+    	       <li><a href="../index.html">Home</a></li>
+    	       <li><a href="../html/news.html">News</a></li>
     	       <li><a href="../html/UnderConstruction.html">Character</a></li>
     	       <li><a href="../html/UnderConstruction.html">Maps</a></li>
     	   </ul>
@@ -65,7 +65,7 @@
     
     <div class="footer">
 	<footer>		
-        <a href="/index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="../html/UnderConstruction.html">About</a>
         <a href="../html/UnderConstruction.html">Services</a>
         <a href="../html/UnderConstruction.html" >Contact</a>
